--- a/dan_website/css/style.css
+++ b/dan_website/css/style.css
@@ -41,7 +41,7 @@ button {
 /*Decoracion navbar*/
 
 header {
-    background: var(--primary-color);
+    background: var(--white-color);
 }
 
 header .navbar {
@@ -49,14 +49,15 @@ header .navbar {
     padding: 20px;
     align-items: center;
     justify-content: space-between;
+    box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.5);
 }
 section{
     background-color: #f4b548;
     width: 900px;
-    border-color: black;
-    border-style: solid;
     text-align: center;
     margin:auto;
+    border-radius: 20px;
+    
     
     
 }
@@ -67,11 +68,24 @@ section{
 
 .navbar .nav-menu .nav-link{
     padding: 10px 18px;
-    color: var(--white-color);
-    background-color: var(--button-color);
-    border-radius: var(--border-radius-m);
+    color: var(--button-color);
+    background-color: var(--white-color);
+   
+    
+
+}
+body  {
+    background-color: aqua;
+    color: var(--text-color);;
+    
 }
 
+header{
+    ti
+    color: var(--button-color);
+}
+
+}
 #footer {
     background-color: var(--primary-color);
     color: var(--dark-color);
